[project]
name = "markypond"
version = "0.1.0"
requires-python = ">=3.10"
description = "Generate sheet music as images from lilypond source embeded in markdown."
readme = "README.md"
licence-files = ['LICENCE']
authors = [
    { name = "rga", email = "contact@rgaz.fr" }
]
dependencies = []

[project.entry-points.'markdown.extensions']
markypond = 'markypond.extension:MarkypondExtension'

[dependency-groups]
dev = [
    "markdown>=3.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markypond"]
